# LinguaLaboratoriumMechanicus

./: .gitignore  README.md  export_to_hub.py  pyproject.toml  train.py  train_sft.py
dataset/: chat_dataset.py  dataset.py
llm/: __init__.py  configuration_llm.py  ffn.py  generation.py  llm.py  mha.py  modeling_llm.py  transformer.py
qwen/: chat_dataset.py  corpus_dataset.py  train_cpt.py  train_sft.py  training.py
tokenizer/: extend_chat_tokens.py  train_tokenizer.py
tokenizer/tokenizer_chat_config/: special_tokens_map.json  tokenizer_config.json
tokenizer/tokenizer_config/: tokenizer_config.json
utils/: analyze_extensions.py  extract_text_to_json.py
utils/extractors/: __init__.py  epub_extractor.py  fb2_extractor.py  pdf_extractor.py
