[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "loguru>=0.7.3",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers==4.57.3",
]

[dependency-groups]
dev = [
    "beautifulsoup4==4.14.3",
    "ebooklib==0.20",
    "lxml==6.0.2",
    "matplotlib>=3.11.0",
    "pymupdf==1.26.6",
    "tqdm==4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
